// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fix prompt rendering > renders the dead-code-cleanup prompt with required fields 1`] = `
"# Dead-code cleanup task

A \`knip\` \`unused-export\`/\`unused-type\` finding means the export is unnecessary, NOT that the
symbol is dead. A symbol is still live if it's reached dynamically — public API, reflection/DI,
config-loaded, or non-static imports — even when knip reports it unused; never delete those.
Otherwise check the contents below for in-file references:

- Referenced in-file → remove only the \`export\` keyword (and any re-export/barrel entry); keep
  the declaration. Deleting it would break typecheck.
- Zero in-file references → delete the whole declaration (and its re-export). For an unused
  \`default\` export still used in-file, drop the \`default export\` modifiers and keep the binding.
- When unsure a reference exists, prefer dropping the \`export\` over deleting.

<file_contents>
(file content not supplied — read the file before editing)
</file_contents>

<findings>
\`\`\`json
[
  {
    "file": "src/unused.ts",
    "range": {
      "startLine": 1,
      "startCol": 0,
      "endLine": 1,
      "endCol": 10
    },
    "tool": "knip",
    "rule": "unused-export",
    "category": "dead-code",
    "severity": "error",
    "message": "Unused export: unusedHelper"
  }
]
\`\`\`
</findings>

<editable_files>
- src/unused.ts
</editable_files>

Done when these verification targets no longer report the dead-code findings:
<verification_targets>
- src/unused.ts
</verification_targets>"
`;

exports[`fix prompt rendering > renders the generated-source-repair prompt with required fields 1`] = `
"# Generated-source repair task

The finding is in a generated artifact that is rebuilt from source. Fix the source owner, never a
generated file under \`dist\`/\`build\`/\`out\`/\`.next\` or generated client output — the build
overwrites those.

<file_contents>
(file content not supplied — read the file before editing)
</file_contents>

<findings>
\`\`\`json
[
  {
    "file": "dist/client.js",
    "range": {
      "startLine": 1,
      "startCol": 0,
      "endLine": 1,
      "endCol": 10
    },
    "tool": "sonarjs",
    "rule": "no-identical-expressions",
    "category": "bug",
    "severity": "error",
    "message": "Generated artifact finding"
  }
]
\`\`\`
</findings>

<editable_files>
- src/client.ts
</editable_files>

Done when, after the build regenerates the artifact, these verification targets no longer report
the findings:
<verification_targets>
- dist/client.js
- src/client.ts
</verification_targets>"
`;

exports[`fix prompt rendering > renders the multi-file-duplicate-refactor prompt with required fields 1`] = `
"# Cross-file duplicate refactor task

Remove the jscpd duplicate code from EVERY clone site (each finding's \`flowPath\` gives the
regions) — editing only one site leaves the finding standing. State the clone type, then extract:

- Exact clone → move the shared logic to one file, export it, import it in the other.
- Renamed/parameterized → extract a function taking the varying parts as parameters.
- Gapped → extract the shared core; pass the varying parts as a callback or options.

If an empty shared-module path is listed as editable, you may create it and put the extracted
function there. If the clones differ too much for a clean shared function, make one file the
canonical owner and import from it — don't add boolean/mode flags to bridge callers. For test
clones, extract a simple factory helper. Delete a clone only if it is provably dead code.

<file_contents>
(file content not supplied — read the file before editing)
</file_contents>

<findings>
\`\`\`json
[
  {
    "file": "src/a.ts",
    "range": {
      "startLine": 10,
      "startCol": 1,
      "endLine": 20,
      "endCol": 2
    },
    "tool": "jscpd",
    "rule": "duplicate-code",
    "category": "duplication",
    "severity": "error",
    "message": "Identical sub-expressions",
    "flowPath": [
      {
        "file": "src/a.ts",
        "line": 10,
        "range": {
          "startLine": 10,
          "startCol": 1,
          "endLine": 20,
          "endCol": 2
        }
      },
      {
        "file": "src/b.ts",
        "line": 30,
        "range": {
          "startLine": 30,
          "startCol": 1,
          "endLine": 40,
          "endCol": 2
        }
      }
    ]
  }
]
\`\`\`
</findings>

<editable_files>
- src/a.ts
- src/b.ts
</editable_files>

Example — \`a.ts\` and \`b.ts\` both reduce over different field names; extract once and import:
<example>
export function sumLineItems(lines: { price: number; qty: number }[]) {
  return lines.reduce((s, l) => s + l.price * l.qty, 0);
}
</example>

Done when the duplication is gone from these verification targets and imports/exports stay valid:
<verification_targets>
- src/a.ts
- src/b.ts
</verification_targets>"
`;

exports[`fix prompt rendering > renders the single-file-ai-edit prompt with required fields 1`] = `
"# Single-file AI edit task

Fix the listed findings in the editable file.

<file_contents>
(file content not supplied — read the file before editing)
</file_contents>

<findings>
\`\`\`json
[
  {
    "file": "src/a.ts",
    "range": {
      "startLine": 1,
      "startCol": 0,
      "endLine": 1,
      "endCol": 10
    },
    "tool": "sonarjs",
    "rule": "no-identical-expressions",
    "category": "bug",
    "severity": "error",
    "message": "Use === instead of =="
  }
]
\`\`\`
</findings>

<editable_files>
- src/a.ts
</editable_files>

Done when these verification targets no longer report the findings:
<verification_targets>
- src/a.ts
</verification_targets>"
`;

exports[`fix prompt rendering > renders the test-file-repair prompt with required fields 1`] = `
"# Test-file repair task

Fix the findings in test code. Keep every test as strict — a changed test must still fail against
the old broken code. Fix the test's own defect, not production behavior.

<file_contents>
(file content not supplied — read the file before editing)
</file_contents>

<findings>
\`\`\`json
[
  {
    "file": "src/a.test.ts",
    "range": {
      "startLine": 1,
      "startCol": 0,
      "endLine": 1,
      "endCol": 10
    },
    "tool": "sonarjs",
    "rule": "no-identical-expressions",
    "category": "bug",
    "severity": "error",
    "message": "Test helper has duplicated branch"
  }
]
\`\`\`
</findings>

<editable_files>
- src/a.test.ts
</editable_files>

Done when these verification targets no longer report the findings:
<verification_targets>
- src/a.test.ts
</verification_targets>"
`;

exports[`makeFixUnit — disk is the source of truth > uses regression repair prompt with rejected diff, exact findings, and gate output 1`] = `
"# Regression repair task

A previous edit cleared its finding but the safety gate rejected it. Keep that fix and repair the
rejection. State its root cause in one sentence (read the history), make the minimal edit, then
confirm each finding is gone with no new tsc error.

The rejected attempt is still on disk — repair it:
<file_contents>
### src/a.ts

\`\`\`
if (cond) {
  doWork();
}

\`\`\`
</file_contents>

Findings the fix must still resolve:
<findings>
\`\`\`json
[
  {
    "file": "src/a.ts",
    "range": {
      "startLine": 1,
      "startCol": 0,
      "endLine": 1,
      "endCol": 10
    },
    "tool": "sonarjs",
    "rule": "no-identical-expressions",
    "category": "bug",
    "severity": "error",
    "message": "Identical sub-expressions"
  }
]
\`\`\`
</findings>

<editable_files>
- src/a.ts
</editable_files>

Every rejected attempt so far (oldest first) with its diff, any new findings, and the gate
output — address their shared root cause, don't re-walk them:
<attempt_history>
### Attempt 1 (rejected)

<rejected_diff>
\`\`\`diff
-const x = a == b;
+if (cond) {
+  doWork();
+}
\`\`\`
</rejected_diff>

New findings it introduced:
<new_findings>
\`\`\`json
[
  {
    "file": "src/a.ts",
    "range": {
      "startLine": 2,
      "startCol": 0,
      "endLine": 2,
      "endCol": 10
    },
    "tool": "sonarjs",
    "rule": "cognitive-complexity",
    "category": "bug",
    "severity": "error",
    "message": "Function has too much cognitive complexity"
  }
]
\`\`\`
</new_findings>

Gate output:
<gate_output>
\`\`\`text
Reason: regression
Fix introduced new finding(s): src/a.ts:2 cognitive-complexity
\`\`\`
</gate_output>
</attempt_history>

Done when the original findings stay fixed and the failure no longer reproduces:
<verification_targets>
- src/a.ts
</verification_targets>"
`;
